- added CRUD endpoints for student
